# lapriselemay_repo1

./: .gitignore  .gitmodules  LICENSE  README.md  fix_web_service.ps1  fix_web_service2.ps1  truncate.ps1
ProgrammationOrienteeObjet/: ProgrammationOrienteeObjet.slnx
ProgrammationOrienteeObjet/IntroCSharp/: Program.cs
Setup_Portable/installers/: QuickLauncher_Setup.iss  TempCleaner_Setup.iss
lapriselemay_solution#1/: .gitignore  Directory.Build.props  Directory.Packages.props  check_db.ps1  fix_viewmodel.py  lapriselemay_solution#1.slnx
lapriselemay_solution#1/CleanUninstaller/: App.xaml  App.xaml.cs  CleanUninstaller.csproj  README.md  app.manifest
lapriselemay_solution#1/CleanUninstaller/Assets/: Styles.xaml  convert_to_ico.ps1  create_icon.ps1
lapriselemay_solution#1/CleanUninstaller/Converters/: Converters.cs
lapriselemay_solution#1/CleanUninstaller/Helpers/: CommonHelpers.cs
lapriselemay_solution#1/CleanUninstaller/Models/: AppSettings.cs  InstallationSnapshot.cs  InstalledProgram.cs  MonitoredInstallation.cs  OrphanedEntry.cs  ResidualItem.cs  ScanProgress.cs  StartupProgram.cs  SystemChange.cs  UninstallResult.cs
lapriselemay_solution#1/CleanUninstaller/Services/: AdvancedDetectionService.cs  AdvancedMonitoringService.cs  BackupService.cs  DialogService.cs  EnhancedInstallationMonitorService.cs  IconCacheService.cs  InstallationMonitorService.cs  LoggerService.cs  OrphanedProgramsService.cs  PackageManagerService.cs  ProgramScannerService.cs  RegistryService.cs  RegistryWatcher.cs  ResidualScannerService.cs  ServiceContainer.cs  SettingsService.cs  SnapshotService.cs  StartupManagerService.cs  UninstallService.cs  WindowsAppService.cs
lapriselemay_solution#1/CleanUninstaller/ViewModels/: EnhancedInstallationMonitorViewModel.cs  InstallationMonitorViewModel.cs  MainViewModel.cs  StartupManagerViewModel.cs
lapriselemay_solution#1/CleanUninstaller/Views/: ChangesDetailDialog.xaml  ChangesDetailDialog.xaml.cs  EnhancedInstallationMonitorPage.xaml  EnhancedInstallationMonitorPage.xaml.cs  InstallationMonitorPage.xaml  InstallationMonitorPage.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  MonitorWindow.xaml  (+12 more)
lapriselemay_solution#1/DriverManager/: CHANGELOG_REFACTORING.md  DriverManager.vcxproj  DriverManager.vcxproj.filters  README.md  apply_modifications.bat  build.bat  build_output.txt  imgui.ini  main.cpp
lapriselemay_solution#1/QuickLauncher/: App.xaml  App.xaml.cs  BatchObservableCollection.cs  Constants.cs  QuickLauncher.csproj  README.md  app.manifest  diagnose_apps.ps1  migrate_proxies.ps1
lapriselemay_solution#1/QuickLauncher.Tests/: AppSettingsTests.cs  CommandRouterTests.cs  QuickLauncher.Tests.csproj  SearchAlgorithmsTests.cs  SettingsProviderTests.cs  SystemControlExecutorTests.cs
lapriselemay_solution#1/RegistryCleaner/: README.md  RegistryCleaner.vcxproj  RegistryCleaner.vcxproj.filters
lapriselemay_solution#1/SurfaceBatteryMonitor/: README.md  SurfaceBatteryMonitor.cpp  SurfaceBatteryMonitor.vcxproj  SurfaceBatteryMonitor.vcxproj.filters
lapriselemay_solution#1/TempCleaner/: .gitignore  App.xaml  App.xaml.cs  Cleaner.cpp  Cleaner.h  README.md  TempCleaner.csproj  TempCleaner.rc  TempCleaner.vcxproj  TempCleaner.vcxproj.filters  app.manifest  create_icon.ps1  main.cpp  resource.h
lapriselemay_solution#1/WallpaperManager/: App.xaml  App.xaml.cs  README.md  WallpaperManager.csproj  app.manifest  fix_status_messages.ps1  test_write2.txt
lapriselemay_solution#1/perfmonitorQt/: .gitignore  CMakeLists.txt  CMakePresets.json  IMPLEMENTATION_GUIDE.md  LICENSE.txt  PerfMonitorQt.nfo  README.md  perfmonitorQt.vcxproj  rebuild_project.bat  rebuild_project.ps1
lapriselemay_solution#1/perfmonitorQt/installer/: setup.iss
lapriselemay_solution#1/perfmonitorQt/installer/redist/: README.md
lapriselemay_solution#1/perfmonitorQt/resources/: resources.qrc
lapriselemay_solution#1/perfmonitorQt/src/: main.cpp  mainwindow.cpp  mainwindow.h
lapriselemay_solution#1/perfmonitorQt/src/cleaners/: systemcleaner.cpp  systemcleaner.h
lapriselemay_solution#1/perfmonitorQt/src/database/: metricshistory.cpp  metricshistory.h  servicehistory.cpp  servicehistory.h
lapriselemay_solution#1/perfmonitorQt/src/monitors/: advancedprocessmonitor.cpp  advancedprocessmonitor.h  batterymonitor.cpp  batterymonitor.h  cpumonitor.cpp  cpumonitor.h  detailedmemorymonitor.cpp  detailedmemorymonitor.h  diskmonitor.cpp  diskmonitor.h  diskscannermonitor.cpp  diskscannermonitor.h  enhancedcpumonitor.h  gpumonitor.cpp  gpumonitor.h  memorymonitor.cpp  memorymonitor.h  networkmonitor.cpp  networkmonitor.h  networkspeedtest.cpp  networkspeedtest.h  processimpactmonitor.cpp  processimpactmonitor.h  servicemonitor.cpp  servicemonitor.h  startupmonitor.cpp  startupmonitor.h  storagehealthmonitor.cpp  storagehealthmonitor.h  temperaturemonitor.cpp  temperaturemonitor.h
lapriselemay_solution#1/perfmonitorQt/src/monitors/_obsolete/: processmonitor.cpp  processmonitor.h
lapriselemay_solution#1/perfmonitorQt/src/utils/: common.h  energymode.cpp  energymode.h  monitorworker.cpp  monitorworker.h  systeminfo.cpp  systeminfo.h  tempcleaner.cpp  tempcleaner.h  tempcleaner_paths.cpp
lapriselemay_solution#1/perfmonitorQt/src/widgets/: advancedprocessdialog.cpp  advancedprocessdialog.h  advancedprocesswidget.cpp  advancedprocesswidget.h  cleanerdialog.cpp  cleanerdialog.h  comparisonchart.cpp  comparisonchart.h  detailedmemorydialog.cpp  detailedmemorydialog.h  diskscannerdialog.cpp  diskscannerdialog.h  energymodedialog.cpp  energymodedialog.h  floatingwidget.cpp  floatingwidget.h  historychartwidget.cpp  historychartwidget.h  historydialog.cpp  historydialog.h  interactivechart.cpp  interactivechart.h  networkspeedtestdialog.cpp  networkspeedtestdialog.h  processdialog.cpp  processdialog.h  processimpactdialog.cpp  processimpactdialog.h  processimpactwidget.cpp  processimpactwidget.h  servicedialog.h  servicehistorydialog.cpp  servicehistorydialog.h  servicesdialog.cpp  servicesdialog.h  settingsdialog.cpp  settingsdialog.h  sparklinegraph.cpp  sparklinegraph.h  startupdialog.cpp  (+11 more)
(+292 files in other folders)
